# new-mac-performance-testing

./: README.md
app/: Makefile  matrix_multiplication.py  pyproject.toml  requirements.txt
app/notebooks/: gpu_benchmark.ipynb  notebook.ipynb
app/scripts/: gpu_cuda.py  gpu_m1.py  gpu_m1_heavy.py
