[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["kavisek <kavi.skhon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
torchvision = "^0.16.1"
pandas = "^2.1.3"
torch = "^2.1.1"
transformers = "^4.35.2"
seaborn = "^0.13.0"
jupyterlab = "^4.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"